# SI339_FinalProject

./: cypress.config.js  deployed_bundle.js  deployed_index.html  package-lock.json  package.json  pyproject.toml  resttest.sh  webpack.config.js
coolmedia/: __init__.py  config.py  model.py
coolmedia/api/: __init__.py  comments.py  helper.py  index.py  likes.py  posts.py
coolmedia/js/: post.jsx  posts.jsx
coolmedia/static/css/: style.css
coolmedia/static/js/: bundle.js  bundle.js.map
coolmedia/templates/: account_create.html  account_delete.html  account_edit.html  account_login.html  account_password.html  explore.html  followers.html  following.html  index.html  post.html  user.html
coolmedia/util/: __init__.py  comments_db_portal.py  following_db_portal.py  helper.py  likes_db_portal.py  posts_db_portal.py  users_db_portal.py
coolmedia/views/: __init__.py  accounts.py  comments.py  db_portal.py  explore.py  follow.py  helper.py  index.py  likes.py  post.py  user.py
env/: pyvenv.cfg
sql/: data.sql  schema.sql
var/: coolmedia.sqlite3  insta485.sqlite3
